trim strings in TR_PHASES_HEADERS

--- a/radio/src/translations/cz.h.txt
+++ b/radio/src/translations/cz.h.txt
@@ -748,7 +748,7 @@
 #endif
 
 // Taranis column headers
-#define TR_PHASES_HEADERS      { " Jméno ", " Spínač ", " Trimy ", " Přechod Zap ", " Přechod Vyp " }
+#define TR_PHASES_HEADERS      { " Jméno ", " Spínač ", " Trim směrovky", " Trim výškovky ", " Trim plynu", " Trim křidélek", " Přechod Zap ", " Přechod Vyp " }
 #define TR_LIMITS_HEADERS      { " Jméno ", " Subtrim ", " Min ", " Max ", " Směr ", " Křivka ", " Střed PPM ", " Symetrické " }
 #define TR_CSW_HEADERS         { " Funkce ", " Hodnota 1 ", " Hodnota 2 ", " Hodnota 2 ", " AND Spínač ", " Trvání ", " Zpoždění " }
 
