--- a/radio/src/translations/es.h.txt
+++ b/radio/src/translations/es.h.txt
@@ -748,7 +748,7 @@
 #endif
 
 // Taranis column headers
-#define TR_PHASES_HEADERS      { " Nombre ", " Interrup.", " Trims ", " Aparecer ", " Desparecer " }
+#define TR_PHASES_HEADERS      { " Nombre ", " Interrup.", " Rudder Trim ", " Elevator Trim ", " Throttle Trim ", " Aileron Trim ", " Aparecer ", " Desparecer " }
 #define TR_LIMITS_HEADERS      { " Nombre ", " Compensacion", " Min ", " Max ", " Direccion ", " Curve ", " Centrado PPM ", " Simetrica " }
 #define TR_CSW_HEADERS         { " Funcion ", " V1 ", " V2 ", " V2 ", " AND Interrup. ", " Duracion ", " Retardo " }
 
