A couple of strings translated to Swedish

--- a/radio/src/translations/se.h.txt
+++ b/radio/src/translations/se.h.txt
@@ -401,7 +401,7 @@
 #define TR_VTRAINERMODES       "Lärare""Elev\0."
 
 #define LEN_VFAILSAFE          "\011"
-#define TR_VFAILSAFE           "Håll\0    ""Special\0 ""Pulsfritt"
+#define TR_VFAILSAFE           "Lås Servo""Special\0 ""Pulsfritt"
 
 #if defined(MAVLINK)
   #define LEN_MAVLINK_BAUDS    "\006"
@@ -436,9 +436,9 @@
 #define TR_MODELNAME           "Modellnamn"
 #define TR_PHASENAME           "Lägesnamn "
 #define TR_MIXNAME             "Mixnamn "
-#define TR_INPUTNAME           "Filternamn"
+#define TR_INPUTNAME           "Inputnamn"
 #if defined(PCBTARANIS)
-  #define TR_EXPONAME          "Linjenamn"
+  #define TR_EXPONAME          "Radnamn"
 #else
   #define TR_EXPONAME          "Exponamn"
 #endif
@@ -480,7 +480,7 @@
 #define TR_TRIM                "Trim"
 #define TR_DREX                "DRex"
 #define TR_CURVE               "Kurva"
-#define TR_FLMODE              TR("Läge","Lägen")
+#define TR_FLMODE              TR("Läge","Flyglägen")
 #define TR_MIXWARNING          "Varning"
 #define TR_OFF                 "Av "
 #define TR_MULTPX              "Multpx"
@@ -514,7 +514,7 @@
 #define TR_THROTTLE_LABEL      "Gas"
 #define TR_THROTTLEREVERSE     TR("Inv.Gas", INDENT "Inverterad Gas")
 #define TR_MINUTEBEEP          INDENT"Minutpip"
-#define TR_BEEPCOUNTDOWN       INDENT"Räkna ned"
+#define TR_BEEPCOUNTDOWN       INDENT"Nedräkning"
 #define TR_PERSISTENT          TR("Jämt på ",INDENT"Alltid På")
 #define TR_BACKLIGHT_LABEL     "Belysning"
 #define TR_BLDELAY             INDENT"Av efter"
@@ -585,13 +585,13 @@
 
 #if defined(PCBTARANIS)
   #define TR_MENUINPUTS        "INPUT"
-  #define TR_MENULIMITS        "GRÄNSER"
+  #define TR_MENULIMITS        "SERVON"
 #elif defined(PPM_CENTER_ADJUSTABLE) || defined(PPM_LIMITS_SYMETRICAL) // The right menu titles for the gurus ...
   #define TR_MENUINPUTS        "SPAKAR" 
-  #define TR_MENULIMITS        "GRÄNSER"
+  #define TR_MENULIMITS        "SERVON"
 #else
   #define TR_MENUINPUTS        TR("DR/EXPO","DUALRATES/EXPO")
-  #define TR_MENULIMITS        "GRÄNSER"
+  #define TR_MENULIMITS        "SERVON"
 #endif
 
 #define TR_MENUCURVES          "KURVOR"
@@ -603,7 +603,7 @@
 #define TR_MENUTEMPLATES       "MALLAR"
 #define TR_MENUSTAT            "STATISTIK"
 #define TR_MENUDEBUG           "DEBUG"
-#define TR_RXNUM               "RxNum"
+#define TR_RXNUM               TR("RxNum", "Mottagare nummer:")
 #define TR_SYNCMENU            "Synk [MENU]"
 #define TR_LIMIT               INDENT"Nivå"
 #define TR_MINRSSI             "Min Rssi"
@@ -682,10 +682,10 @@
 #define TR_CHANNELS_MONITOR    "Kanalöversikt"
 #define TR_INTERNALRF          "Intern RF"
 #define TR_EXTERNALRF          "Extern RF"
-#define TR_FAILSAFE            "Failsafe-läge"
+#define TR_FAILSAFE            "Failsafefunktion"
 #define TR_FAILSAFESET         "FailsafeInställning"
 #define TR_COUNTRYCODE         "Landskod"
-#define TR_VOICELANG           "Röst-språk"
+#define TR_VOICELANG           "Röstspråk"
 #define TR_UNITSSYSTEM         "Enheter"
 #define TR_EDIT                "Redigera"
 #define TR_INSERT_BEFORE       "Addera Före"
@@ -795,6 +795,7 @@
   #define TR_ABOUT_HARDWARE_2  "Sky9x design/producent"
   #define TR_ABOUT_HARDWARE_3  ""
 #endif
+
 
 #define TR_ABOUT_PARENTS_1     "Ursprungsprojekt"
 #define TR_ABOUT_PARENTS_2     "ersky9x (Mike Blandford)"
