Translations added. For information here is the command which allowes these automatic changes: ../util/addtr.py TR_ENABLE_POPUP="Enable Popup" TR_DISABLE_POPUP="Disable Popup" TR_CURVE_PRESET="Preset..." TR_PRESET="Preset" TR_MIRROR="Mirror" TR_CLEAR="Clear" TR_RESET="Reset" TR_COPY_TRIMS_TO_OFS="Copy Trims To Offset" TR_CRITICALALARM

--- a/radio/src/translations/cz.h.txt
+++ b/radio/src/translations/cz.h.txt
@@ -717,6 +717,14 @@
 #define TR_CHANNELRANGE        INDENT "Rozsah kanálů"
 #define TR_LOWALARM            INDENT "Nízký Alarm"
 #define TR_CRITICALALARM       INDENT "Kritický Alarm"
+#define TR_ENABLE_POPUP        "Enable Popup"
+#define TR_DISABLE_POPUP       "Disable Popup"
+#define TR_CURVE_PRESET        "Preset..."
+#define TR_PRESET              "Preset"
+#define TR_MIRROR              "Mirror"
+#define TR_CLEAR               "Clear"
+#define TR_RESET               "Reset"
+#define TR_COPY_TRIMS_TO_OFS   "Copy Trims To Offset"
 #define TR_PERSISTENT_MAH      INDENT "Store mAh"
 #define TR_PREFLIGHT           "Předletová kontrola"
 #define TR_CHECKLIST           INDENT "Zobrazit poznámky"
