--- a/radio/src/translations/fi.h.txt
+++ b/radio/src/translations/fi.h.txt
@@ -820,5 +820,8 @@
 
 #define TR_TOP_BAR             "Ylä palkki"
 #define TR_ALTITUDE            INDENT "Korkeus"
+#define TR_SCALE               "Scale"
+#define TR_VIEW_CHANNELS       "View Channels"
+#define TR_VIEW_NOTES          "View Notes"
 #define TR_MODS_FORBIDDEN      "Muutokset kielletty!"
 #define TR_UNLOCKED            "Avattu"
