--- a/radio/src/translations/de.h.txt
+++ b/radio/src/translations/de.h.txt
@@ -680,6 +680,8 @@
 #define TR_DATE                "Datum:"
 #define TR_ROTARY_ENCODER      "Drehgeber"
 #define TR_CHANNELS_MONITOR    "Kanal Monitor"
+#define TR_PATH_TOO_LONG       "Path too long"
+#define TR_VIEW_TEXT           "View text"
 #define TR_INTERNALRF          "----Internes HF Modul----------"
 #define TR_EXTERNALRF          "----Externes HF Modul----------"
 #define TR_FAILSAFE            "Failsafe Mode"
