--- a/radio/src/translations/es.h.txt
+++ b/radio/src/translations/es.h.txt
@@ -678,6 +678,8 @@
 #define TR_DATE                "Fecha"
 #define TR_ROTARY_ENCODER      "R.Encs"
 #define TR_CHANNELS_MONITOR    "MONITOR CANALES"
+#define TR_PATH_TOO_LONG       "Path too long"
+#define TR_VIEW_TEXT           "View text"
 #define TR_INTERNALRF          "Interna RF"
 #define TR_EXTERNALRF          "Externa RF"
 #define TR_FAILSAFE            INDENT"Modo sgdad."
