--- a/radio/src/translations/fr.h.txt
+++ b/radio/src/translations/fr.h.txt
@@ -685,6 +685,8 @@
 #define TR_DATE                "Date"
 #define TR_ROTARY_ENCODER      "Enc.Rot."
 #define TR_CHANNELS_MONITOR    "MONITEUR CANAUX"
+#define TR_PATH_TOO_LONG       "Path too long"
+#define TR_VIEW_TEXT           "View text"
 #define TR_INTERNALRF          "HF interne"
 #define TR_EXTERNALRF          "HF externe"
 #define TR_FAILSAFE            INDENT "Type failsafe"
