Next ones... ../util/addtr.py TR_EXECUTE_FILE="Execute" TR_ASSIGN_BITMAP ../util/addtr.py TR_NO_SCRIPTS_ON_SD="No Scripts on SD" TR_NO_BITMAPS_ON_SD

--- a/radio/src/translations/cz.h.txt
+++ b/radio/src/translations/cz.h.txt
@@ -652,11 +652,13 @@
 #define TR_NO_SOUNDS_ON_SD     "žádný zvuk na SD"
 #define TR_NO_MODELS_ON_SD     "žádný model na SD"
 #define TR_NO_BITMAPS_ON_SD    "žádné obrázky na SD"
+#define TR_NO_SCRIPTS_ON_SD    "No Scripts on SD"
 #define TR_PLAY_FILE           "Přehrát"
 #define TR_DELETE_FILE         "Odstranit"
 #define TR_COPY_FILE           "Kopírovat"
 #define TR_RENAME_FILE         "Přejmenovat"
 #define TR_ASSIGN_BITMAP       "Zvolit obrázek"
+#define TR_EXECUTE_FILE        "Execute"
 #define TR_REMOVED             " odstraněn"
 #define TR_SD_INFO             "Informace"
 #define TR_SD_FORMAT           "Formát"
