--- a/radio/src/translations/en.h.txt
+++ b/radio/src/translations/en.h.txt
@@ -660,11 +660,13 @@
 #define TR_NO_SOUNDS_ON_SD     "No Sounds on SD"
 #define TR_NO_MODELS_ON_SD     "No Models on SD"
 #define TR_NO_BITMAPS_ON_SD    "No Bitmaps on SD"
+#define TR_NO_SCRIPTS_ON_SD    "No Scripts on SD"
 #define TR_PLAY_FILE           "Play"
 #define TR_DELETE_FILE         "Delete"
 #define TR_COPY_FILE           "Copy"
 #define TR_RENAME_FILE         "Rename"
 #define TR_ASSIGN_BITMAP       "Assign Bitmap"
+#define TR_EXECUTE_FILE        "Execute"
 #define TR_REMOVED             " removed"
 #define TR_SD_INFO             "Information"
 #define TR_SD_FORMAT           "Format"
