--- a/radio/src/translations/it.h.txt
+++ b/radio/src/translations/it.h.txt
@@ -650,11 +650,13 @@
 #define TR_NO_SOUNDS_ON_SD     "No Suoni su SD"
 #define TR_NO_MODELS_ON_SD     "No Model. su SD"
 #define TR_NO_BITMAPS_ON_SD    "no Immag. su SD"
+#define TR_NO_SCRIPTS_ON_SD    "No Scripts on SD"
 #define TR_PLAY_FILE           "Suona"
 #define TR_DELETE_FILE         "Cancella"
 #define TR_COPY_FILE           "Copia"
 #define TR_RENAME_FILE         "Rinomomina"
 #define TR_ASSIGN_BITMAP       "Assegna Immagine"
+#define TR_EXECUTE_FILE        "Execute"
 #define TR_REMOVED             " rimosso"
 #define TR_SD_INFO             "Informazioni"
 #define TR_SD_FORMAT           "Format"
