--- a/radio/src/translations/pl.h.txt
+++ b/radio/src/translations/pl.h.txt
@@ -650,11 +650,13 @@
 #define TR_NO_SOUNDS_ON_SD     "brak dźwięków na SD"
 #define TR_NO_MODELS_ON_SD     "brak modelu na SD"
 #define TR_NO_BITMAPS_ON_SD    "brak obrazków na SD"
+#define TR_NO_SCRIPTS_ON_SD    "No Scripts on SD"
 #define TR_PLAY_FILE           "Odtwórz"
 #define TR_DELETE_FILE         "Skasuj"
 #define TR_COPY_FILE           "Kopiuj"
 #define TR_RENAME_FILE         "Zmień nazwę"
 #define TR_ASSIGN_BITMAP       "Wybierz obrazek"
+#define TR_EXECUTE_FILE        "Execute"
 #define TR_REMOVED             " skasowane"
 #define TR_SD_INFO             "Informacje"
 #define TR_SD_FORMAT           "Formatuj"
