--- a/radio/src/translations/de.h.txt
+++ b/radio/src/translations/de.h.txt
@@ -652,11 +652,13 @@
 #define TR_NO_SOUNDS_ON_SD     "Keine Töne auf SD"
 #define TR_NO_MODELS_ON_SD     "Keine Modelle auf SD"
 #define TR_NO_BITMAPS_ON_SD    "Keine Bitmaps auf SD"
+#define TR_NO_SCRIPTS_ON_SD    "No Scripts on SD"
 #define TR_PLAY_FILE           "Spielen"
 #define TR_DELETE_FILE         "Löschen"
 #define TR_COPY_FILE           "Kopieren"
 #define TR_RENAME_FILE         "Umbenennen"
 #define TR_ASSIGN_BITMAP       "Assign Bitmap"
+#define TR_EXECUTE_FILE        "Execute"
 #define TR_REMOVED             " gelöscht"
 #define TR_SD_INFO             "Information"
 #define TR_SD_FORMAT           "Formattieren"
