--- a/radio/src/translations/es.h.txt
+++ b/radio/src/translations/es.h.txt
@@ -650,11 +650,13 @@
 #define TR_NO_SOUNDS_ON_SD     "Sin sonidos en SD"
 #define TR_NO_MODELS_ON_SD     "Sin Modelos en SD"
 #define TR_NO_BITMAPS_ON_SD    "Sin imagenes en SD"
+#define TR_NO_SCRIPTS_ON_SD    "No Scripts on SD"
 #define TR_PLAY_FILE           "Play"
 #define TR_DELETE_FILE         "Borrar"
 #define TR_COPY_FILE           "Copiar"
 #define TR_RENAME_FILE         "Renombrar"
 #define TR_ASSIGN_BITMAP       "Asignar Imagen"
+#define TR_EXECUTE_FILE        "Execute"
 #define TR_REMOVED             "Borrado"
 #define TR_SD_INFO             "Informacion"
 #define TR_SD_FORMAT           "Formatear"
