--- a/radio/src/translations/fr.h.txt
+++ b/radio/src/translations/fr.h.txt
@@ -657,11 +657,13 @@
 #define TR_NO_SOUNDS_ON_SD     "Aucun son sur SD"
 #define TR_NO_MODELS_ON_SD     "Aucun modèle SD"
 #define TR_NO_BITMAPS_ON_SD    "Aucun Bitmap SD"
+#define TR_NO_SCRIPTS_ON_SD    "No Scripts on SD"
 #define TR_PLAY_FILE           "Lire"
 #define TR_DELETE_FILE         "Supprimer"
 #define TR_COPY_FILE           "Copier"
 #define TR_RENAME_FILE         "Renommer"
 #define TR_ASSIGN_BITMAP       "Sélectionner image"
+#define TR_EXECUTE_FILE        "Execute"
 #define TR_REMOVED             " supprimé"
 #define TR_SD_INFO             "Information"
 #define TR_SD_FORMAT           "Formater"
