--- a/radio/src/translations/pt.h.txt
+++ b/radio/src/translations/pt.h.txt
@@ -650,11 +650,13 @@
 #define TR_NO_SOUNDS_ON_SD     "Sem Som no SD"
 #define TR_NO_MODELS_ON_SD     "Sem Modelo no SD"
 #define TR_NO_BITMAPS_ON_SD    "No Bitmaps on SD"
+#define TR_NO_SCRIPTS_ON_SD    "No Scripts on SD"
 #define TR_PLAY_FILE           "Play"
 #define TR_DELETE_FILE         "Apagar"
 #define TR_COPY_FILE           "Copiar"
 #define TR_RENAME_FILE         "Renomear"
 #define TR_ASSIGN_BITMAP       "Assign Bitmap"
+#define TR_EXECUTE_FILE        "Execute"
 #define TR_REMOVED             "Remover"
 #define TR_SD_INFO             "Dados SD"
 #define TR_SD_FORMAT           "Formatar"
