Next one... ../util/addtr.py TR_MENUCUSTOMSCRIPTS="CUSTOM SCRIPTS" TR_MENUCUSTOMSCRIPT="CUSTOM SCRIPT" TR_MENUCUSTOMFUNC

--- a/radio/src/translations/cz.h.txt
+++ b/radio/src/translations/cz.h.txt
@@ -599,6 +599,8 @@
 #define TR_MENULOGICALSWITCH    "LOG. SPÍNAč"
 #define TR_MENULOGICALSWITCHES  "LOGICKÉ SPÍNAčE"
 #define TR_MENUCUSTOMFUNC      "FUNKCE"
+#define TR_MENUCUSTOMSCRIPTS   "CUSTOM SCRIPTS"
+#define TR_MENUCUSTOMSCRIPT    "CUSTOM SCRIPT"
 #define TR_MENUTELEMETRY       "TELEMETRIE"
 #define TR_MENUTEMPLATES       "ŠABLONY"
 #define TR_MENUSTAT            "STATISTIKA"
