--- a/radio/src/translations/de.h.txt
+++ b/radio/src/translations/de.h.txt
@@ -599,6 +599,8 @@
 #define TR_MENULOGICALSWITCH   "LOGIK SCHALTER"
 #define TR_MENULOGICALSWITCHES "LOGIK SCHALTER"
 #define TR_MENUCUSTOMFUNC      "SPEZ. FUNKTIONEN"
+#define TR_MENUCUSTOMSCRIPTS   "CUSTOM SCRIPTS"
+#define TR_MENUCUSTOMSCRIPT    "CUSTOM SCRIPT"
 #define TR_MENUTELEMETRY       "TELEMETRIE"
 #define TR_MENUTEMPLATES       "VORLAGEN"
 #define TR_MENUSTAT            "STAT"
