--- a/radio/src/translations/es.h.txt
+++ b/radio/src/translations/es.h.txt
@@ -597,6 +597,8 @@
 #define TR_MENULOGICALSWITCH    "AJTE.INTERUP."
 #define TR_MENULOGICALSWITCHES  "AJTE.INTERUPTS."
 #define TR_MENUCUSTOMFUNC      "AJTE. FUNCIONES"
+#define TR_MENUCUSTOMSCRIPTS   "CUSTOM SCRIPTS"
+#define TR_MENUCUSTOMSCRIPT    "CUSTOM SCRIPT"
 #define TR_MENUTELEMETRY       "TELEMETRIA"
 #define TR_MENUTEMPLATES       "PLANTILLAS"
 #define TR_MENUSTAT            "STATS"
