--- a/radio/src/translations/fi.h.txt
+++ b/radio/src/translations/fi.h.txt
@@ -597,6 +597,8 @@
 #define TR_MENULOGICALSWITCH    "CUSTOM SWITCH"
 #define TR_MENULOGICALSWITCHES  "CUSTOM SWITCHES"
 #define TR_MENUCUSTOMFUNC      "CUSTOM FUNCTIONS"
+#define TR_MENUCUSTOMSCRIPTS   "CUSTOM SCRIPTS"
+#define TR_MENUCUSTOMSCRIPT    "CUSTOM SCRIPT"
 #define TR_MENUTELEMETRY       "TELEMETRY"
 #define TR_MENUTEMPLATES       "TEMPLATES"
 #define TR_MENUSTAT            "STATS"
