--- a/radio/src/translations/it.h.txt
+++ b/radio/src/translations/it.h.txt
@@ -597,6 +597,8 @@
 #define TR_MENULOGICALSWITCH    "SWITCH PERSON."
 #define TR_MENULOGICALSWITCHES  TR("SWITCH PERSON.","SWITCH PERSONALIZZATI")
 #define TR_MENUCUSTOMFUNC      TR("FUNZ. PERSON.","FUNZIONI PERSONALIZZATE")
+#define TR_MENUCUSTOMSCRIPTS   "CUSTOM SCRIPTS"
+#define TR_MENUCUSTOMSCRIPT    "CUSTOM SCRIPT"
 #define TR_MENUTELEMETRY       "TELEMETRIA"
 #define TR_MENUTEMPLATES       "ESEMPI GUIDA"
 #define TR_MENUSTAT            "STATS"
