--- a/radio/src/translations/pt.h.txt
+++ b/radio/src/translations/pt.h.txt
@@ -597,6 +597,8 @@
 #define TR_MENULOGICALSWITCH    "CHAVE ESPECIAL"
 #define TR_MENULOGICALSWITCHES  "CHAVES ESPECIAIS"
 #define TR_MENUCUSTOMFUNC      "FUNCAO ESPECIAL"
+#define TR_MENUCUSTOMSCRIPTS   "CUSTOM SCRIPTS"
+#define TR_MENUCUSTOMSCRIPT    "CUSTOM SCRIPT"
 #define TR_MENUTELEMETRY       "TELEMETRIA"
 #define TR_MENUTEMPLATES       "MODELOS"
 #define TR_MENUSTAT            "REGISTROS"
