--- a/radio/src/translations/en.h.txt
+++ b/radio/src/translations/en.h.txt
@@ -607,6 +607,8 @@
 #define TR_MENULOGICALSWITCH   "LOGICAL SWITCH"
 #define TR_MENULOGICALSWITCHES "LOGICAL SWITCHES"
 #define TR_MENUCUSTOMFUNC      "CUSTOM FUNCTIONS"
+#define TR_MENUCUSTOMSCRIPTS   "CUSTOM SCRIPTS"
+#define TR_MENUCUSTOMSCRIPT    "CUSTOM SCRIPT"
 #define TR_MENUTELEMETRY       "TELEMETRY"
 #define TR_MENUTEMPLATES       "TEMPLATES"
 #define TR_MENUSTAT            "STATS"
