--- a/radio/src/translations/se.h.txt
+++ b/radio/src/translations/se.h.txt
@@ -599,6 +599,8 @@
 #define TR_MENULOGICALSWITCH   "LOGISK BRYTARE"
 #define TR_MENULOGICALSWITCHES "LOGISKA BRYTARE"
 #define TR_MENUCUSTOMFUNC      "BRYTARFUNKTIONER"
+#define TR_MENUCUSTOMSCRIPTS   "CUSTOM SCRIPTS"
+#define TR_MENUCUSTOMSCRIPT    "CUSTOM SCRIPT"
 #define TR_MENUTELEMETRY       "TELEMETRI"
 #define TR_MENUTEMPLATES       "MALLAR"
 #define TR_MENUSTAT            "STATISTIK"
