--- a/radio/src/translations/fr.h.txt
+++ b/radio/src/translations/fr.h.txt
@@ -604,8 +604,8 @@
 #define TR_MENULOGICALSWITCH   "INTER LOG."
 #define TR_MENULOGICALSWITCHES TR("INTERS LOG.","INTERS LOGIQUES")
 #define TR_MENUCUSTOMFUNC      TR("FONCTIONS SPEC.","FONCTIONS SPECIALES")
-#define TR_MENUCUSTOMSCRIPTS   "CUSTOM SCRIPTS"
-#define TR_MENUCUSTOMSCRIPT    "CUSTOM SCRIPT"
+#define TR_MENUCUSTOMSCRIPTS   "SCRIPTS PERSOS"
+#define TR_MENUCUSTOMSCRIPT    "SCRIPT PERSO"
 #define TR_MENUTELEMETRY       "TELEMESURE"
 #define TR_MENUTEMPLATES       "GABARITS"
 #define TR_MENUSTAT            TR("STATS","STATISTIQUES")
@@ -659,13 +659,13 @@
 #define TR_NO_SOUNDS_ON_SD     "Aucun son sur SD"
 #define TR_NO_MODELS_ON_SD     "Aucun modèle SD"
 #define TR_NO_BITMAPS_ON_SD    "Aucun Bitmap SD"
-#define TR_NO_SCRIPTS_ON_SD    "No Scripts on SD"
+#define TR_NO_SCRIPTS_ON_SD    "Aucun Script SD"
 #define TR_PLAY_FILE           "Lire"
 #define TR_DELETE_FILE         "Supprimer"
 #define TR_COPY_FILE           "Copier"
 #define TR_RENAME_FILE         "Renommer"
 #define TR_ASSIGN_BITMAP       "Sélectionner image"
-#define TR_EXECUTE_FILE        "Execute"
+#define TR_EXECUTE_FILE        "Executer"
 #define TR_REMOVED             " supprimé"
 #define TR_SD_INFO             "Information"
 #define TR_SD_FORMAT           "Formater"
@@ -689,8 +689,8 @@
 #define TR_DATE                "Date"
 #define TR_ROTARY_ENCODER      "Enc.Rot."
 #define TR_CHANNELS_MONITOR    "MONITEUR CANAUX"
-#define TR_PATH_TOO_LONG       "Path too long"
-#define TR_VIEW_TEXT           "View text"
+#define TR_PATH_TOO_LONG       "Chemin trop long"
+#define TR_VIEW_TEXT           "Voir texte"
 #define TR_INTERNALRF          "HF interne"
 #define TR_EXTERNALRF          "HF externe"
 #define TR_FAILSAFE            INDENT "Type failsafe"
@@ -728,14 +728,14 @@
 #define TR_CHANNELRANGE        INDENT "Plage de canaux"
 #define TR_LOWALARM            INDENT "Alarme basse"
 #define TR_CRITICALALARM       INDENT "Alarme critique"
-#define TR_ENABLE_POPUP        "Enable Popup"
-#define TR_DISABLE_POPUP       "Disable Popup"
+#define TR_ENABLE_POPUP        "Activer Popup"
+#define TR_DISABLE_POPUP       "Désactiver Popup"
 #define TR_CURVE_PRESET        "Preset..."
 #define TR_PRESET              "Preset"
-#define TR_MIRROR              "Mirror"
-#define TR_CLEAR               "Clear"
+#define TR_MIRROR              "Mirroir"
+#define TR_CLEAR               "Réinitialiser"
 #define TR_RESET               "Reset"
-#define TR_COPY_TRIMS_TO_OFS   "Copy Trims To Offset"
+#define TR_COPY_TRIMS_TO_OFS   "Trims vers offsets"
 #define TR_PERSISTENT_MAH      TR(INDENT "Enr. mAh", INDENT "Enregistrer mAh")
 #define TR_PREFLIGHT           "Vérifications avant vol"
 #define TR_CHECKLIST           INDENT "Afficher notes"
@@ -833,8 +833,8 @@
 
 #define TR_TOP_BAR             "Barre titre"
 #define TR_ALTITUDE            INDENT "Altitude"
-#define TR_SCALE               "Scale"
-#define TR_VIEW_CHANNELS       "View Channels"
-#define TR_VIEW_NOTES          "View Notes"
+#define TR_SCALE               "Echelle"
+#define TR_VIEW_CHANNELS       "Voir Voies"
+#define TR_VIEW_NOTES          "Voir Notes"
 #define TR_MODS_FORBIDDEN      "Modifications désactivées!"
 #define TR_UNLOCKED            "Déverrouillé"
