--- a/radio/src/translations/es.h.txt
+++ b/radio/src/translations/es.h.txt
@@ -728,6 +728,8 @@
 #define TR_MIRROR              "Mirror"
 #define TR_CLEAR               "Clear"
 #define TR_RESET               "Reset"
+#define TR_COUNT               "Count"
+#define TR_SMOOTH              "Smooth"
 #define TR_COPY_TRIMS_TO_OFS   "Copy Trims To Offset"
 #define TR_PERSISTENT_MAH      INDENT "Valor mAh"
 #define TR_PREFLIGHT           "Preflight Checks"
