Vario parameters translations

--- a/radio/src/translations/cz.h.txt
+++ b/radio/src/translations/cz.h.txt
@@ -613,6 +613,9 @@
 #define TR_LONGITUDE           "Zem. délka"
 #define TR_GPSCOORD            "GPS souřadnice"
 #define TR_VARIO               "Vario"
+#define TR_PITCH_AT_ZERO       "\001Pitch at Zero"
+#define TR_PITCH_AT_MAX        "\001Pitch at Max"
+#define TR_REPEAT_AT_ZERO      "\001Repeat at Zero"
 #define TR_SHUTDOWN            "VYPÍNÁNí.."
 #define TR_BATT_CALIB          "Kalib:Baterie"
 #define TR_CURRENT_CALIB       " +=\006Proud"
