--- a/radio/src/translations/it.h.txt
+++ b/radio/src/translations/it.h.txt
@@ -611,6 +611,9 @@
 #define TR_LONGITUDE           "Longitud."
 #define TR_GPSCOORD            "Coord. GPS"
 #define TR_VARIO               "Vario"
+#define TR_PITCH_AT_ZERO       "\001Pitch at Zero"
+#define TR_PITCH_AT_MAX        "\001Pitch at Max"
+#define TR_REPEAT_AT_ZERO      "\001Repeat at Zero"
 #define TR_SHUTDOWN            "ARRESTO.."
 #define TR_BATT_CALIB          "Calibra batt."
 #define TR_CURRENT_CALIB       "Calibra corr."
