--- a/radio/src/translations/pt.h.txt
+++ b/radio/src/translations/pt.h.txt
@@ -611,6 +611,9 @@
 #define TR_LONGITUDE           "Longitude"
 #define TR_GPSCOORD            "Gps Coords"
 #define TR_VARIO               "Vario"
+#define TR_PITCH_AT_ZERO       "\001Pitch at Zero"
+#define TR_PITCH_AT_MAX        "\001Pitch at Max"
+#define TR_REPEAT_AT_ZERO      "\001Repeat at Zero"
 #define TR_SHUTDOWN            "DESLIGANDOo"
 #define TR_BATT_CALIB          "CALIBRAR BATT"
 #define TR_CURRENT_CALIB       "Corrente Calib"
